2.4.3
-----
1. Show server/player settings 'statusarea' messages in a toast.
2. Set max-width of toolbar title when showing clock.
3. Slightly adjust clock position.

2.4.2
-----
 1. If volume adjusted via javascript (e.g. from Material APK) then have volume
    dialogs update.
 2. Show fixed volume players (even if set to hide) as disabled in group volume
    dialog.
 3. If current player is no longer synced then close group volume dialog.
 4. Add support for Group players' 'Always synchronize all members' option.
 5. Use track's URL to determine 'Source' for MAI track info.
 6. Add more track source mappings - Radio France, Radio Paradise, SoundCloud,
    Times Radio, Virgin Radion, etc.
 7. If no MAI album review then show album cover.
 8. If no MAI biography then show artist image.
 9. Better track details spacing.
10. Don't show player menu if set for single player and power button shown in
    toolbar.
11. Fade top/bottom of now-playing (info and MAI) details.
12. Move 'Changes have been saved' from settings pages to bottom left.
13. Don't show menu if click on header item in now-playing track list.
14. Show album and track counds in now-playing.
15. Only list first 50 tracks of album in now-playing.

2.4.1
-----
 1. Ensure sliders are re-added when settings saved.
 2. Fix usage of player parameter when player name has spaces.
 3. Fix restricting slider input value to min/max range.
 4. If 'single' passed as query param then ignore players on other LMS servers.
 5. Remove LMS8.2 shuffle mode setting from 'Random mix' dialog, as this
    setting will now be generic and not random mix specific.
 6. Hide alarm settings if alarm functionality is disabled.
 7. When click browse's back button after clicking (...) in now-playing re-show
    now-playing MAI view.
 8. Only navigate back into now-playing from browse if using mobile layout.
 9. Adjust power button in toolbar position.
10. If MAI can't find details, then show artist, album or track title in